# Effectue-Launcher

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
src/: App.css  App.tsx  Cache.tsx  Settings.ts  Settings.tsx  Splash.tsx  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: banner4.avif
src/pages/: Launcher.tsx  Setup.tsx  Testing.tsx
src/pages/components/: Clients.tsx  Home.tsx  Verisons.tsx  Versions.tsx  advancements.json
src/styles/: Launcher.scss  Setup.module.scss
src/utils/: createPropsState.ts  waitforElement.ts
