[package]
name = "Effectue"
version = "0.0.1"
description = "Effectue - Effective Performance!"
authors = ["BunnyGamez"]
license = "Apache 2.0"
repository = "https://github.com/BunnyGamezsc/Effectue-Solid"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }


[dependencies]
tauri = { version = "1.4", features = [ "shell-open", "path-all", "http-all", "window-set-content-protected"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-invoke-http = { git = "https://github.com/tauri-apps/tauri-invoke-http", branch = "dev" }
reqwest = "0.11.20"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
